--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -1,12 +1,13 @@
 .form {
   display: flex;
   border-top: 2px solid #D3D3D3;
+  box-shadow: rgb(0 18 46 / 16%) 0px 8px 36px 0px;
 }
 
 .input {
   border: none;
   border-radius: 0;
-  padding: 2%;
+  padding: 5%;
   width: 80%;
   font-size: 1.1em;
 }
@@ -23,6 +24,7 @@ input:focus, textarea:focus, select:focus{
   padding: 10px;
   display: inline-block;
   border: none;
-  width: 25%;
-  font-size: 1.0em;
+  width: 18% !important;
+  height: auto !important;
+  /*font-size: 1.0em;*/
 }
