--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #1A1A1D;
+  background-color: #ffffff;
 }
 
 .container {
@@ -11,9 +11,10 @@
   flex-direction: column;
   justify-content: space-between;
   background: #FFFFFF;
-  border-radius: 8px;
-  height: 70%;
+  border-radius: 20px 20px 0px 0px;
+  height: 90%;
   width: 20%;
+  box-shadow: rgb(0 18 46 / 16%) 0px 8px 36px 0px;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
